{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 336,
  "lineage": "9fbd4671-99d8-c24b-fb12-e58a2d870be2",
  "resources": [
    {
      "module": "module.instance_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f6a11788f8e319e",
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:instance/i-020ceaa0f479643f8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020ceaa0f479643f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-sshkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6ea018ea746b0fb",
            "private_dns": "ip-172-16-1-101.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c52c820b2c0dc520",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbb412fc1e45f0bf",
            "tags": {
              "Name": "websvr01"
            },
            "tags_all": {
              "Name": "websvr01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cceb03af9800c1c5"
            ]
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01",
            "module.sshkey_module.aws_key_pair.kp01",
            "module.sshkey_module.tls_private_key.tls01"
          ]
        }
      ]
    },
    {
      "module": "module.instance_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f6a11788f8e319e",
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:instance/i-006efdfbfe06c8e2f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006efdfbfe06c8e2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-sshkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03869538c64149be0",
            "private_dns": "ip-172-16-2-102.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d69dbd4527404734",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a050f0e7d810068",
            "tags": {
              "Name": "websvr02"
            },
            "tags_all": {
              "Name": "websvr02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cceb03af9800c1c5"
            ]
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01",
            "module.sshkey_module.aws_key_pair.kp01",
            "module.sshkey_module.tls_private_key.tls01"
          ]
        }
      ]
    },
    {
      "module": "module.instance_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f6a11788f8e319e",
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:instance/i-0c36c4fae56845447",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c36c4fae56845447",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-sshkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b609a4034a7640d",
            "private_dns": "ip-172-16-3-103.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d07cc5126b3f309",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ec947e695a9eb0a",
            "tags": {
              "Name": "service01"
            },
            "tags_all": {
              "Name": "service01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cceb03af9800c1c5"
            ]
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.private_subnet01",
            "module.networking_module.aws_vpc.vpc01",
            "module.sshkey_module.aws_key_pair.kp01",
            "module.sshkey_module.tls_private_key.tls01"
          ]
        }
      ]
    },
    {
      "module": "module.instance_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f6a11788f8e319e",
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:instance/i-0dd677ce1a1b53703",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd677ce1a1b53703",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-sshkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0064e5b99ca9b1c1a",
            "private_dns": "ip-172-16-4-104.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.4.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-087b57c0e73f738de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f982e89f25af2191",
            "tags": {
              "Name": "service02"
            },
            "tags_all": {
              "Name": "service02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cceb03af9800c1c5"
            ]
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.private_subnet02",
            "module.networking_module.aws_vpc.vpc01",
            "module.sshkey_module.aws_key_pair.kp01",
            "module.sshkey_module.tls_private_key.tls01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:loadbalancer/app/loadbalaner01/023bcd20e0920153",
            "arn_suffix": "app/loadbalaner01/023bcd20e0920153",
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalaner01-848572738.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:loadbalancer/app/loadbalaner01/023bcd20e0920153",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalaner01",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cceb03af9800c1c5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a050f0e7d810068"
              },
              {
                "subnet_id": "subnet-0cbb412fc1e45f0bf"
              }
            ],
            "subnets": [
              "subnet-07a050f0e7d810068",
              "subnet-0cbb412fc1e45f0bf"
            ],
            "tags": {
              "Name": "lb01"
            },
            "tags_all": {
              "Name": "lb01"
            },
            "vpc_id": "vpc-0c1cd26c93b351f95",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ltn01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:listener/app/loadbalaner01/023bcd20e0920153/07ed7274f4fd8e68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/278916e6a987e49a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:listener/app/loadbalaner01/023bcd20e0920153/07ed7274f4fd8e68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:loadbalancer/app/loadbalaner01/023bcd20e0920153",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.lb01",
            "module.loadbalancer_module.aws_lb_target_group.tg01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/278916e6a987e49a",
            "arn_suffix": "targetgroup/target01/278916e6a987e49a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/278916e6a987e49a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target01",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attch01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/278916e6a987e49a-20230312095139192300000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/278916e6a987e49a",
            "target_id": "i-020ceaa0f479643f8"
          },
          "dependencies": [
            "module.instance_module.aws_instance.instance01",
            "module.loadbalancer_module.aws_lb_target_group.tg01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01",
            "module.sshkey_module.aws_key_pair.kp01",
            "module.sshkey_module.tls_private_key.tls01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attch02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/278916e6a987e49a-20230312095139981900000007",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/278916e6a987e49a",
            "target_id": "i-006efdfbfe06c8e2f"
          },
          "dependencies": [
            "module.instance_module.aws_instance.instance02",
            "module.loadbalancer_module.aws_lb_target_group.tg01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01",
            "module.sshkey_module.aws_key_pair.kp01",
            "module.sshkey_module.tls_private_key.tls01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dabe3ddb78e136b",
            "domain": "vpc",
            "id": "eipalloc-00dabe3ddb78e136b",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-139-80-211.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.80.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip01"
            },
            "tags_all": {
              "Name": "elastic_ip01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d6c08131d4f26fc",
            "association_id": "eipassoc-0cd9e027015a6b0dd",
            "domain": "vpc",
            "id": "eipalloc-00d6c08131d4f26fc",
            "instance": "i-020ceaa0f479643f8",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d6ea018ea746b0fb",
            "private_dns": "ip-172-16-1-101.ap-southeast-1.compute.internal",
            "private_ip": "172.16.1.101",
            "public_dns": "ec2-13-214-89-96.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.214.89.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic_ip02"
            },
            "tags_all": {
              "Name": "elastic_ip02"
            },
            "vpc": true
          },
          "dependencies": [
            "module.instance_module.aws_instance.instance01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01",
            "module.sshkey_module.aws_key_pair.kp01",
            "module.sshkey_module.tls_private_key.tls01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:internet-gateway/igw-0345374c216e5ab78",
            "id": "igw-0345374c216e5ab78",
            "owner_id": "655612526828",
            "tags": {
              "Name": "gateway01"
            },
            "tags_all": {
              "Name": "gateway01"
            },
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dabe3ddb78e136b",
            "connectivity_type": "public",
            "id": "nat-0709698de36d315d6",
            "network_interface_id": "eni-055ce77f78da39acd",
            "private_ip": "172.16.1.211",
            "public_ip": "18.139.80.211",
            "subnet_id": "subnet-0cbb412fc1e45f0bf",
            "tags": {
              "Name": "nat01"
            },
            "tags_all": {
              "Name": "nat01"
            }
          },
          "dependencies": [
            "module.networking_module.aws_eip.eip01",
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:route-table/rtb-02dd9a6845ae31a69",
            "id": "rtb-02dd9a6845ae31a69",
            "owner_id": "655612526828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0709698de36d315d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_eip.eip01",
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_nat_gateway.nat01",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:route-table/rtb-0887eada69b6e2dde",
            "id": "rtb-0887eada69b6e2dde",
            "owner_id": "655612526828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0345374c216e5ab78",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0345374c216e5ab78",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9dd995f1ba06a29",
            "route_table_id": "rtb-02dd9a6845ae31a69",
            "subnet_id": "subnet-01ec947e695a9eb0a"
          },
          "dependencies": [
            "module.networking_module.aws_eip.eip01",
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_nat_gateway.nat01",
            "module.networking_module.aws_route_table.private",
            "module.networking_module.aws_subnet.private_subnet01",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014707d8b5b11cf12",
            "route_table_id": "rtb-02dd9a6845ae31a69",
            "subnet_id": "subnet-0f982e89f25af2191"
          },
          "dependencies": [
            "module.networking_module.aws_eip.eip01",
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_nat_gateway.nat01",
            "module.networking_module.aws_route_table.private",
            "module.networking_module.aws_subnet.private_subnet02",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f17d250379b8621",
            "route_table_id": "rtb-0887eada69b6e2dde",
            "subnet_id": "subnet-0cbb412fc1e45f0bf"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_route_table.public",
            "module.networking_module.aws_subnet.public_subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085bfb7353f950b5b",
            "route_table_id": "rtb-0887eada69b6e2dde",
            "subnet_id": "subnet-07a050f0e7d810068"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_route_table.public",
            "module.networking_module.aws_subnet.public_subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:security-group/sg-0cceb03af9800c1c5",
            "description": "Allow web-traffice inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cceb03af9800c1c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web-traffic",
            "name_prefix": "",
            "owner_id": "655612526828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web-traffic"
            },
            "tags_all": {
              "Name": "allow_web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:subnet/subnet-01ec947e695a9eb0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ec947e695a9eb0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655612526828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet01"
            },
            "tags_all": {
              "Name": "private_subnet01"
            },
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:subnet/subnet-0f982e89f25af2191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f982e89f25af2191",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655612526828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet02"
            },
            "tags_all": {
              "Name": "private_subnet02"
            },
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:subnet/subnet-0cbb412fc1e45f0bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbb412fc1e45f0bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655612526828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet01"
            },
            "tags_all": {
              "Name": "public_subnet01"
            },
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:subnet/subnet-07a050f0e7d810068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a050f0e7d810068",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655612526828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet02"
            },
            "tags_all": {
              "Name": "public_subnet02"
            },
            "vpc_id": "vpc-0c1cd26c93b351f95"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:vpc/vpc-0c1cd26c93b351f95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-043d7c2d932f40ef2",
            "default_route_table_id": "rtb-0fb246d7f372ef448",
            "default_security_group_id": "sg-0547c169906ec0c8c",
            "dhcp_options_id": "dopt-06a2a22973a05d284",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1cd26c93b351f95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb246d7f372ef448",
            "owner_id": "655612526828",
            "tags": {
              "Name": "aws_vpc01"
            },
            "tags_all": {
              "Name": "aws_vpc01"
            }
          }
        }
      ]
    }
  ]
}